- fixed weird scrollbar height on pc

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -105,6 +105,7 @@ textarea::placeholder {
 
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 ::-webkit-scrollbar-track {
